typeNameForCast: use add_pointer instead of string manipulation

Relying on string manipulation leads to -Wredundant-parens warnings in
the best case, and to non-compiling code (when using typedefs) in the
worst case.
We can avoid both issues by simply generating code that uses
add_pointer, which takes care of reference types (even typedef'd ones),
and creates no warnings about parens (as we don't write any anymore).

Fixes: QTBUG-100915
Change-Id: Ic5b1cbfda20d920d11f51beeb62e9479261d5f00
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit 8079361852417f57b5db8e47994870c4c8d63e3f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>